Added partial daily endpoints
